# SATQuestionBank

./: .gitignore  BUILD_APP.md  DESKTOP.md  FIXES_v1.8.md  IMPLEMENTATION_GUIDE.md  README.md  desktop-launcher.js  electron-main.js  next.config.mjs  package-lock.json  package.json  react-katex.d.ts  start-desktop.bat  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/achievements/: page.tsx
app/analytics/: page.tsx
app/api/ocr/: route.ts
app/api/questions/: route.ts
app/bank/: page.tsx
app/bluebook/: page.tsx
app/bluebook/review/: page.tsx
app/collections/: page.tsx
app/mistakes/: page.tsx
app/quiz/: page.tsx
app/study-sessions/: page.tsx
app/upload/: page.tsx
components/: achievement-notification.tsx  command-palette.tsx  nav-shell.tsx  question-card.tsx  question-editor.tsx  question-history-modal.tsx
components/ui/: glass-card.tsx  safe-html.tsx  select.tsx
lib/: mock-data.ts  sat-categories.ts  store.ts  types.ts  use-keyboard-shortcuts.ts
lib/ocr/: engine.ts  tesseract-adapter.ts
prisma/: schema.prisma  seed.ts
prisma/migrations/20260705224427_init/: migration.sql
scripts/: cb-import.ts  cb-seed.ts  tauri-postbuild.js  tauri-prebuild.js
src/: instrumentation.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: add-to-collection.tsx  favorite-button.tsx  nav-shell.tsx  question-card.tsx
src/db/: schema.ts
src/lib/: api-client.ts  quiz-session.ts  sat-categories.ts  seed.ts  server-questions.ts  types.ts  utils.ts
(+33 files in other folders)
