[package]
name = "sat-nexus"
version = "1.8.2"
description = "SAT Nexus – Soft Paper Question Bank"
authors = ["SAT Nexus"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev]
incremental = true
[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true
